logs/seedmeopenmm.log
Listing '.'...
Listing './bin'...
Compiling './bin/seedme.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ipcfg'...
Listing './lib/python3.5/site-packages/ipcfg/IPython'...
Compiling './lib/python3.5/site-packages/ipcfg/IPython/configurable.py'...
***   File "./lib/python3.5/site-packages/ipcfg/IPython/configurable.py", line 239
    print cls.class_get_help(inst)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ipcfg/IPython/decorator'...
Compiling './lib/python3.5/site-packages/ipcfg/IPython/decorator/_decorator.py'...
***   File "./lib/python3.5/site-packages/ipcfg/IPython/decorator/_decorator.py", line 163
    exec code in evaldict
            ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/ipcfg/IPython/loader.py'...
***   File "./lib/python3.5/site-packages/ipcfg/IPython/loader.py", line 359
    exec u'self.config.%s = value' % lhs
                                 ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/ipcfg/IPython/py3compat.py'...
***   File "./lib/python3.5/site-packages/ipcfg/IPython/py3compat.py", line 100
    exec compile(f.read(), fname, 'exec') in glob, loc
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ipcfg/IPython/traitlets.py'...
***   File "./lib/python3.5/site-packages/ipcfg/IPython/traitlets.py", line 901
    default_value = 0L
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ipcfg/argparse_loader.py'...
***   File "./lib/python3.5/site-packages/ipcfg/argparse_loader.py", line 45
    exec 'self.config.%s = %s' % (k, v)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ipcfg/openmmapplication.py'...
***   File "./lib/python3.5/site-packages/ipcfg/openmmapplication.py", line 243
    print os.linesep.join(lines)
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/openmm-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.7.0.dist-info'...
Listing './lib/python3.5/site-packages/seedme-1.2.4.egg-info'...
Listing './lib/python3.5/site-packages/seedmeopenmm'...
Listing './lib/python3.5/site-packages/seedmeopenmm-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
